--- a/Balance/appsettings.json
+++ b/Balance/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MoneyBalanceContext": "Host=localhost;Database=BalanceDB;Username=postgres;Password=cg1234"
+  }
