--- a/Balance/appsettings.json
+++ b/Balance/appsettings.json
@@ -7,5 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MoneyBalanceContext": "Host=localhost;Database=BalanceDB;Username=postgres;Password=cg1234"
+    "MoneyBalanceContext": "Host=localhost;port:5432;Database=BalanceDB;Username=postgres;Password=cg1234"
   }
+}
