--- a/Balance/appsettings.json
+++ b/Balance/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MoneyBalanceContext": "Host=localhost;port:5432;Database=BalanceDB;Username=postgres;Password=cg1234"
+    "MoneyBalanceContext": "Host=localhost;port=5432;Database=BalanceDB;Username=postgres;Password=cg1234;"
+    
   }
 }
